data/derived/comb/progs/unify/prog3523.ml.out
Characters 139-140:
  let (bar, res) = List.fold_left f base args in
                                  ^
Error: This expression has type int -> int -> int list * int list
       but an expression was expected of type int -> int -> int
       Type int list * int list is not compatible with type int 
